# tradingbotcrypto

./: .dockerignore  .gitignore  Analiz  CUR  Dockerfile  EDUCATION.MD  EDUCATIONTRAIDE.MD  PINBAR.MD  README.md  Refactoring.3  Refactoring1.md  Refactoring2.md  docker-compose.yml  pyproject.toml  signallog.md  traide.MD
RAG.md/: EDUCATIN.MD
alembic/: env.py
app/api/: deps.py  main.py  router.py  schemas.py
app/bot/: api_client.py  handlers.py  keyboards.py  main.py  states.py
app/core/: config.py  logging.py  telegram.py
app/db/: init.py  models.py  session.py
app/services/: ai_engine.py  binance_candles.py  binance_universe.py  dex_data.py  feed_formatter.py  live_ingest.py  market_data.py  market_feed.py  market_provider.py  market_state_cache.py  news_sentiment.py  performance.py  rsi_engine.py  signal_contract.py  signal_filters.py  signal_presentation.py  strategy_engine.py  user_settings.py
app/workers/: mock_signal_worker.py
audit/: telegram_export_day2_comparison.md
scripts/: _tmp_direct_deploy.py  _tmp_fix_remote.py  _tmp_remote_redeploy.py  deploy_server.py
tests/: test_binance_candles_snapshot.py  test_feed_formatter.py  test_health.py  test_live_ingest.py  test_market_provider_policy.py  test_market_state_cache.py  test_rsi_engine.py  test_signal_contract.py  test_signal_filters.py  test_signal_presentation.py  test_stats_short_history_bounds.py  test_strategy_engine.py  test_user_settings.py  test_worker_chat_fairness.py  test_worker_sharding.py  test_worker_timeframe_fallback.py
