[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoarbitrajbot"
version = "0.1.0"
description = "Telegram bot + FastAPI backend for crypto market analytics and signals."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "aiogram>=3.4.1",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.1",
  "pydantic-settings>=2.2.1",
  "sqlalchemy[asyncio]>=2.0.27",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "redis>=5.0.1",
  "httpx>=0.27.0",
  "httpx-ws",
  "feedparser>=6.0.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.5",
  "ruff>=0.2.2",
]

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

